objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Endpoint__c</fullName>
        <label>Five9 WS Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Password__c</fullName>
        <label>Five9 User Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ReportEmail__c</fullName>
        <label>Five9 Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__Five9User__c</fullName>
        <label>Five9 User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>